OpenJMLTest/test/twoFilesA/expected
test/twoFilesA/B.jml:1: error: This JML field declaration conflicts with an existing field with the same name: B.k
public class B { /*@ model int k;*/ }
                               ^
test/twoFilesA/B.java:1: error: Associated declaration: test/twoFilesA/B.jml:1:
public class B { int k ;  }
                     ^
Operation not performed because of parse or type errors
2 errors
